added export functionalities