@@ -7,7 +7,6 @@ import org.springframework.stereotype.Service;
 import java.time.LocalDateTime;
 import java.time.temporal.ChronoUnit;
 import java.util.*;
-import java.util.stream.Collectors;
 
 @Service
 public class AnalysisService {
@@ -20,16 +19,14 @@ public class AnalysisService {
     public List<FlatFactorRating> collectAllFactorRatings(List<String> surveyIds) {
         List<FlatFactorRating> allFactorRatings = new ArrayList<>();
 
-        List<Survey> loadedSurveys = surveyIds.stream().map(surveyId -> surveyService.loadSurveyById(surveyId)).flatMap(Optional::stream).collect(Collectors.toList());
+        List<Survey> loadedSurveys = surveyIds.stream().map(surveyId -> surveyService.loadSurveyById(surveyId)).flatMap(Optional::stream).toList();
 
         for (Survey survey : loadedSurveys) {
             for (String sessionId : survey.getSubmits().keySet()) {
                 Submit submit = survey.getSubmits().get(sessionId);
 
-                List<Factor> factors = submit.getFactors().entrySet().stream()
-                        .map(entry -> entry.getValue())
-                        .sorted(Comparator.comparing(factor -> factor.getEdits().get(0))) //sort by first edit time
-                        .collect(Collectors.toList());
+                List<Factor> factors = submit.getFactors().values().stream()
+                        .sorted(Comparator.comparing(factor -> factor.getEdits().get(0))).toList();
 
                 LocalDateTime previousEditTime = factors.get(0).getEdits().get(0);
 
@@ -54,7 +51,7 @@ public class AnalysisService {
     public List<FactorResult> summarizeFactorResults(List<FlatFactorRating> factorRatings) {
         List<FactorResult> factorResults = new ArrayList<>();
 
-        List<String> factorkeys = factorRatings.stream().map(factorRating -> factorRating.getFactorKey()).distinct().collect(Collectors.toList());
+        List<String> factorkeys = factorRatings.stream().map(FlatFactorRating::getFactorKey).distinct().toList();
 
         for (String factorKey : factorkeys) {
             Map<String, List<Integer>> aspectRatings = new HashMap<>();
@@ -62,7 +59,7 @@ public class AnalysisService {
             factorRatings.stream()
                     .filter(factorRating -> factorRating.getFactorKey().equals(factorKey))
                     .map(factorRating -> factorRating.getAspectRatings().entrySet())
-                    .flatMap(entrySet -> entrySet.stream()).forEach(entry -> {
+                    .flatMap(Collection::stream).forEach(entry -> {
                         if (aspectRatings.containsKey(entry.getKey())) {
                             aspectRatings.get(entry.getKey()).add(entry.getValue());
                         } else {
@@ -77,7 +74,7 @@ public class AnalysisService {
         return factorResults;
     }
 
-    public List<String> convertToCsvFileLines(List<FlatFactorRating> factorRatings) {
+    public List<String> convertFactorRatingsToCsv(List<FlatFactorRating> factorRatings) {
 
         List<String> result = new ArrayList<>();
         String header = "token;sessionId;factorKey;answerTime;" + String.join(";", QUALITY_ASPECTS);
@@ -85,14 +82,14 @@ public class AnalysisService {
 
         result.addAll(factorRatings.stream().map(flatFactorRating -> {
             StringBuilder toAdd = new StringBuilder();
-            toAdd.append(flatFactorRating.getSurveyToken() + ";");
-            toAdd.append(flatFactorRating.getSessionId() + ";");
-            toAdd.append(flatFactorRating.getFactorKey() + ";");
-            toAdd.append(flatFactorRating.getSecondsToAnswer() + ";");
+            toAdd.append(flatFactorRating.getSurveyToken()).append(";");
+            toAdd.append(flatFactorRating.getSessionId()).append(";");
+            toAdd.append(flatFactorRating.getFactorKey()).append(";");
+            toAdd.append(flatFactorRating.getSecondsToAnswer()).append(";");
 
             for (String qualityAspect : QUALITY_ASPECTS) {
                 if (flatFactorRating.getAspectRatings().containsKey(qualityAspect)) {
-                    toAdd.append(flatFactorRating.getAspectRatings().get(qualityAspect) + ";");
+                    toAdd.append(flatFactorRating.getAspectRatings().get(qualityAspect)).append(";");
                 } else {
                     toAdd.append("0;");
                 }
@@ -101,9 +98,64 @@ public class AnalysisService {
             toAdd.deleteCharAt(toAdd.length() - 1);
 
             return toAdd.toString();
-        }).collect(Collectors.toList()));
+        }).toList());
 
         return result;
     }
+
+    public List<FlatDemographics> collectAllDemographics(List<String> surveyIds) {
+
+        List<FlatDemographics> allDemographics = new ArrayList<>();
+
+        List<Survey> loadedSurveys = surveyIds.stream().map(surveyId -> surveyService.loadSurveyById(surveyId)).flatMap(Optional::stream).toList();
+
+        for (Survey survey : loadedSurveys) {
+
+            allDemographics.addAll(survey.getSubmits().values().stream()
+                    .map(submit -> new FlatDemographics(
+                            survey.getToken(),
+                            submit.getSessionId(),
+                            submit.getDemographics().getJobArea(),
+                            submit.getDemographics().getJobTitle(),
+                            submit.getDemographics().getCompanySector(),
+                            submit.getDemographics().getGeneralExperience(),
+                            submit.getDemographics().getCloudExperience()
+                    ))
+                    .toList()
+            );
+        }
+        return allDemographics;
+    }
+
+    public List<String> convertDemographicsToCsv(List<FlatDemographics> demographics) {
+
+        List<String> result = new ArrayList<>();
+        String header = "token;sessionId;jobArea;jobTitle;companySector;generalExperience;cloudExperience";
+        result.add(header);
+
+        result.addAll(demographics.stream().map(demographicValues -> demographicValues.getSurveyToken() + ";" +
+                demographicValues.getSessionId() + ";" +
+                demographicValues.getJobArea() + ";" +
+                demographicValues.getJobTitle() + ";" +
+                demographicValues.getCompanySector() + ";" +
+                demographicValues.getGeneralExperience() + ";" +
+                demographicValues.getCloudExperience()).toList());
+
+        return result;
+
+    }
+
+    public List<String> collectContactsAsCsv(List<String> surveyIds) {
+
+        List<String> contactEmails = new ArrayList<>();
+        contactEmails.add("email");
+
+        contactEmails.addAll(surveyIds.stream().map(surveyId -> surveyService.loadAllContactsForSurvey(surveyId)).flatMap(Collection::stream).map(Contact::getEmail).toList());
+
+        return contactEmails;
+
+    }
+
+
 
 }
